# evm2wasm

./: CMakeLists.txt  circle.yml  index.js
include/: evm2wasm.h  wast-async.h  wast.h
libs/evm2wasm/: CMakeLists.txt  evm2wasm.cpp
tools/evm2wasm/: main.cpp
wasm/: generateInterface.js  wast-async.json  wast.json
